--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
   
   .navbar {
     background: #000000;
-    height: 60px;
+    height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,7 +30,7 @@
   }
   
   #navbar__logo {
-    background-color: #ff8177;
+    background-color: #ff1100;
     background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
     background-size: 100%;
     -webkit-background-clip: text;
@@ -55,7 +55,7 @@
   }
   
   .navbar__links {
-    color: #fff;
+    color: rgb(147, 217, 226);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -85,8 +85,8 @@
     outline: none;
     border-radius: 4px;
     background: #833ab4;
-    background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
-    background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
+    background: -webkit-linear-gradient(to right, #67f360, #1dfd42, #833ab4);
+    background: linear-gradient(to right, #67f360, #1dfdf42, #833ab4);
     color: #fff;
     transition: all 0.3s ease;
   }
@@ -110,7 +110,7 @@
     .navbar__menu {
       display: grid;
       grid-template-columns: auto;
-      margin: 0;
+      margin: 0;  
       width: 100%;
       position: absolute;
       top: -1000px;
