major website updates

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Kumbh Sans', sans-serif;
+    font-family: sans-serif;
     scroll-behavior: smooth;
   }
   
@@ -30,8 +30,7 @@
   }
   
   #navbar__logo {
-    background-color: #ff1100;
-    background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
+    background-color: #ffffff;
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -42,6 +41,11 @@
     cursor: pointer;
     text-decoration: none;
     font-size: 2rem;
+  }
+
+  #navbar__logo:hover {
+    transform: scale(1.5);
+    transition: 1s;
   }
   
   .navbar__menu {
@@ -55,7 +59,7 @@
   }
   
   .navbar__links {
-    color: rgb(147, 217, 226);
+    color: rgb(255, 255, 255);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -84,11 +88,14 @@
     border: none;
     outline: none;
     border-radius: 4px;
-    background: #833ab4;
-    background: -webkit-linear-gradient(to right, #67f360, #1dfd42, #833ab4);
-    background: linear-gradient(to right, #67f360, #1dfdf42, #833ab4);
+    background: #9518fc;
     color: #fff;
     transition: all 0.3s ease;
+  }
+
+  .button:hover {
+    opacity: 0.5;
+    transition: 0.25s;
   }
   
   .navbar__links:hover {
@@ -120,7 +127,7 @@
     }
   
     .navbar__menu.active {
-      background: #131313;
+      background: #000000;
       top: 100%;
       opacity: 1;
       transition: all 0.5s ease;
@@ -193,7 +200,6 @@
   /* Hero Section */
   .hero {
     background: #000000;
-    background: linear-gradient(to right, #161616, #000000);
     padding: 200px 0;
   }
   
@@ -219,33 +225,35 @@
     background: #ee0979; /* fallback for old browsers */
     background: -webkit-linear-gradient(
       to right,
-      #ff6a00,
-      #ee0979
+      #ffffff,
+      #9518fc
     ); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(
       to right,
-      #ff6a00,
-      #ee0979
+      #ffffff,
+      #9518fc
     ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
     -mo-text-fill-color: transparent;
+    transform: translatex(-100%);
   }
   
   .hero__description {
-    font-size: 60px;
+    font-style: italic;
+    font-size: 30px;
     background: #da22ff; /* fallback for old browsers */
     background: -webkit-linear-gradient(
       to right,
-      #9114ff,
-      #da22ff
+      #9518fc,
+      #ffffff
     ); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(
       to right,
-      #8f0eff,
-      #da22ff
+      #9518fc,
+      #ffffff
     ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background-size: 100%;
     -webkit-background-clip: text;
@@ -264,13 +272,14 @@
     }
   
     .hero__description {
+      font-style: italic;
       font-size: 40px;
     }
   }
   
   /* About Section */
   .main {
-    background-color: #131313;
+    background-color: #000000;
     padding: 10rem 0;
   }
   
@@ -295,7 +304,7 @@
   .main__content h1 {
     font-size: 2rem;
     background-color: #fe3b6f;
-    background-image: linear-gradient(to top, #ff087b 0%, #ed1a52 100%);
+    background-image: linear-gradient(to top, #ffffff 0%, #9518fc 100%);
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -307,22 +316,7 @@
   
   .main__content h2 {
     font-size: 4rem;
-    background: #ff8177; /* fallback for old browsers */
-    background: -webkit-linear-gradient(
-      to right,
-      #9114ff,
-      #da22ff
-    ); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(
-      to right,
-      #8f0eff,
-      #da22ff
-    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background-size: 100%;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-text-fill-color: transparent;
+    color: White;
   }
   
   .main__content p {
@@ -333,16 +327,14 @@
   
   .main__btn {
     font-size: 1.8rem;
-    background: #833ab4;
-    background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
-    background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
+    background: #9518fc;
     padding: 20px 60px;
     border: none;
     border-radius: 4px;
     margin-top: 2rem;
     cursor: pointer;
     position: relative;
-    transition: all 0.35s;
+    transition: all 0 .35s;
     outline: none;
   }
   
@@ -350,7 +342,7 @@
     position: relative;
     z-index: 2;
     color: #fff;
-    text-decoration: none;
+    text-decoration: wavy;
   }
   
   .main__btn:after {
@@ -360,13 +352,14 @@
     left: 0;
     width: 0;
     height: 100%;
-    background: #ff1ead;
+    opacity: 0.5; 
     transition: all 0.35s;
     border-radius: 4px;
   }
   
   .main__btn:hover {
-    color: #fff;
+    opacity: 0.5;
+    transition: 0.25s;
   }
   
   .main__btn:hover:after {
@@ -473,7 +466,7 @@
   
   /* Services Section */
   .services {
-    background: #131313;
+    background: #000000;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -483,8 +476,7 @@
   }
   
   .services h1 {
-    background-color: #ff8177;
-    background-image: linear-gradient(to right, #ff0844 0%, #f7673c 100%);
+    background-color: #ffffff;
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -496,7 +488,7 @@
   
   .services__wrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
   }
   
@@ -509,7 +501,7 @@
     flex-direction: column;
     justify-content: center;
     color: #fff;
-    background-image: linear-gradient(to right, #00dbde 0%, #fc00ff 100%);
+    background-image: linear-gradient(to right, #ffffff 0%, #9518fc 100%);
     transition: 0.3s ease-in;
   }
   
@@ -561,7 +553,7 @@
     border: none;
     outline: none;
     border-radius: 4px;
-    background: #131313;
+    background: #000000;
     font-size: 1rem;
   }
   
@@ -570,7 +562,7 @@
   }
   
   .services__card:hover {
-    transform: scale(1.075);
+    transform: scale(1.08);
     transition: 0.3s ease-in;
     cursor: pointer;
   }
@@ -589,7 +581,7 @@
   
   /* Footer CSS */
   .footer__container {
-    background-color: #131313;
+    background-color: #000000;
     padding: 5rem 0;
     display: flex;
     flex-direction: column;
@@ -620,7 +612,7 @@
   .footer__link--items {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: flex-center;
     margin: 16px;
     text-align: left;
     width: 160px;
@@ -703,3 +695,18 @@
       width: 100%;
     }
   }
+
+  .page-2 {
+    background-color: black;
+  }
+
+  .box1 {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 30px;
+}
+
+.i2 { 
+  margin-top: 10px;
+}
