--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,23 @@
     font-family: sans-serif;
     scroll-behavior: smooth;
   }
+
+  .navbar__item, .logo {
+    animation-duration: 2s;
+    animation-name: slidein;
+  }
+  
+  @keyframes slidein {
+    from {
+      margin-left: 100%;
+      width: 300%;  
+    }
+  
+    to {
+      margin-left: 0%;
+      width: 100%;
+    }
+  }
   
   .navbar {
     background: #000000;
@@ -372,14 +389,14 @@
   
   .main__img--card {
     margin: 10px;
-    height: 500px;
-    width: 500px;
-    border-radius: 4px;
+    height: 400px;
+    width: 400px;
+    border-radius: 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     color: #fff;
-    background-image: linear-gradient(to right, #00dbde 0%, #fc00ff 100%);
+    background-image: linear-gradient(to top, #ffffff 0%, #9518fc 100%);
   }
   
   .fa-layer-group,
@@ -389,8 +406,8 @@
   
   #card-2 {
     background: #ff512f;
-    background: -webkit-linear-gradient(to right, #dd2476, #ff512f);
-    background: linear-gradient(to right, #dd2476, #ff512f);
+    background: -webkit-linear-gradient(to right, #ffffff, #9518fc);
+    background: linear-gradient(to right, #ffffff, #9518fc);
   }
   
   /* Mobile Responsive */
@@ -463,6 +480,15 @@
       margin: 2.5rem 0;
     }
   }
+
+  @keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(359deg);
+    }
+  }
   
   /* Services Section */
   .services {
@@ -494,31 +520,22 @@
   
   .services__card {
     margin: 10px;
-    height: 425px;
+    height: 300px;
     width: 300px;
-    border-radius: 4px;
+    border-radius: 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     color: #fff;
-    background-image: linear-gradient(to right, #ffffff 0%, #9518fc 100%);
-    transition: 0.3s ease-in;
+    background: #9518fc 
+  }
+
+  .our_products {
+    margin-bottom: 15px;
   }
   
   .services__card:nth-child(2) {
-    background: #1fa2ff; /* fallback for old browsers */
-    background: -webkit-linear-gradient(
-      to right,
-      #a6ffcb,
-      #12d8fa,
-      #1fa2ff
-    ); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(
-      to right,
-      #a6ffcb,
-      #12d8fa,
-      #1fa2ff
-    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #9518fc; /* fallback for old browsers */
   }
   
   .services__card:nth-child(3) {
