--- a/styles.css
+++ b/styles.css
@@ -347,12 +347,13 @@
     background: #9518fc;
     padding: 20px 60px;
     border: none;
-    border-radius: 4px;
+    border-radius: 15px;
     margin-top: 2rem;
     cursor: pointer;
     position: relative;
     transition: all 0 .35s;
     outline: none;
+    width: 1fr;
   }
   
   .main__btn a {
