--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@
     height: 80px;
   }
   
-  .navbar__links {
+  .navbar__links, .credit_text {
     color: rgb(255, 255, 255);
     display: flex;
     align-items: center;
