--- a/styles.css
+++ b/styles.css
@@ -776,3 +776,8 @@
   hr {
     width: 60%; margin: auto; border-width: 5px; border-color: rgb(132, 0, 255); margin-top: 15px; border-radius: 5px;
   }
+
+  .araash_tag:hover {
+    color:#9518fc;
+
+  }
