--- a/styles.css
+++ b/styles.css
@@ -850,15 +850,14 @@
     z-index: 1;
     width: 100%;
     max-width: 1300px;
-    padding: 100px 50px;
+    padding: 20px 50px;
   }
 
-  input, textarea, select, ::placeholder {
+  input, textarea, select, ::placeholder, input:after {
     background-color: black;
     color: white;
-    padding: 5px;
+    padding: 10px;
     border-color:rgb(132, 0, 255);
-
   }
 
   .submitBTN {
@@ -881,3 +880,7 @@
     opacity: 0.9;  
     transform: scale(1.05);
   }
+
+  option::selection { 
+    background-color: rgb(132, 0, 255); 
+}
